# segmenter3D

./: README.md
matlab/: centers.txt  data.pgm  findcolumnloop.m  findcolumns.m  radii.txt
matlab/files/: readme.txt
src/: CMakeLists.txt  CSegmenterColumns.cpp  CSegmenterColumns.h  CSegmenterLCCP.cpp  CSegmenterLCCP.h  CSegmenterRegionGrowing.cpp  CSegmenterRegionGrowing.h  columns.cpp  main.cpp  pcl_visualizer.pro  pcl_visualizer.pro.user.0cab1b0  pcl_visualizer.pro.user.ab4c72c  pclviewer.cpp  pclviewer.h  pclviewer.ui  pgmb_io.c  pgmb_io.h
src/old/: pclviewer - Copia (con meshlab mal funzionante per l'eliminazione NaN).cpp  pclviewer - Copia.cpp  pclviewer - Copia.h
